--- a/index.html
+++ b/index.html
@@ -1,1 +1,86 @@
-<img src="images/mirza-kuchak-khan-ai-m-balaei.png" alt="میرزا کوچک خان">
+<!DOCTYPE html>
+<html lang="fa">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="تصویری بازآفرینی‌شده از میرزا کوچک خان جنگلی، رهبر نهضت جنگل و مبارز راه آزادی ایران.">
+  <title>میرزا کوچک خان جنگلی</title>
+  <style>
+    body {
+      text-align: center;
+      font-family: "Tahoma", sans-serif;
+      background-color: #f7f7f7;
+      padding: 30px;
+      direction: rtl;
+    }
+    h1 {
+      color: #222;
+      margin-bottom: 15px;
+      font-size: 26px;
+    }
+    img {
+      max-width: 90%;
+      height: auto;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.25);
+      margin-top: 20px;
+    }
+    p {
+      color: #333;
+      font-size: 17px;
+      line-height: 1.9;
+      text-align: justify;
+      margin: 25px auto;
+      max-width: 800px;
+    }
+    .quote {
+      background-color: #fff;
+      border-right: 5px solid #008000;
+      margin: 30px auto;
+      padding: 20px;
+      font-size: 18px;
+      font-style: italic;
+      color: #111;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.15);
+      max-width: 700px;
+      line-height: 2;
+    }
+    .quote span {
+      display: block;
+      text-align: left;
+      color: #555;
+      font-size: 15px;
+      margin-top: 10px;
+    }
+  </style>
+</head>
+<body>
+  <h1>میرزا کوچک خان جنگلی</h1>
+  <img src="mirza-kuchak-khan-ai-m-balaei.png" alt="میرزا کوچک خان جنگلی">
+  
+  <div class="quote">
+    «من عاری از شرف می‌دانم کسی را که حقوق حاکمیت و استقلال مملکت را فدیه شغل و مقام کند.  
+    من استقلال ایران را خواهانم و بقای اعتبارات کشور را طالبم!»
+    <span>— میرزا کوچک خان جنگلی</span>
+  </div>
+
+  <p>
+    میرزا کوچک خان جنگلی (۱۲۵۷–۱۳۰۰ خورشیدی) از مبارزان آزادی‌خواه ایران و بنیان‌گذار نهضت جنگل در گیلان بود. 
+    او در دوره‌ای از تاریخ ایران برخاست که کشور درگیر اشغال نیروهای بیگانه و فساد سیاسی درباریان بود.
+  </p>
+
+  <p>
+    هدف میرزا از تشکیل نهضت جنگل، استقلال ایران، عدالت اجتماعی و مقابله با نفوذ قدرت‌های بیگانه به‌ویژه روس و انگلیس بود.
+    او در جنگل‌های گیلان، حکومتی مردمی و مستقل تشکیل داد و با سربازان خود، که بیشتر از مردم بومی بودند، برای آزادی و عدالت جنگید.
+  </p>
+
+  <p>
+    میرزا کوچک خان همواره بر اصول دینی، ملی و اخلاقی تأکید داشت و هیچ‌گاه به خشونت بی‌هدف یا وابستگی به بیگانگان تن نداد.
+    او پس از سال‌ها مقاومت، در سرمای کوه‌های خلخال جان باخت؛ اما نامش به عنوان نماد پاک‌باختگی، صداقت و میهن‌دوستی در تاریخ ایران جاودانه شد.
+  </p>
+
+  <p>
+    این تصویر بازآفرینی‌شده با هدف ادای احترام به میرزا کوچک خان جنگلی تهیه شده است — یادگاری از مبارزی که در سخت‌ترین روزهای تاریخ، پرچم آزادی را بر دوش کشید.
+  </p>
+</body>
+</html>
