Replace with simple page layout

--- a/index.html
+++ b/index.html
@@ -5,19 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="تصویری بازآفرینی‌شده از میرزا کوچک خان جنگلی، رهبر نهضت جنگل و مبارز راه آزادی ایران.">
   <title>میرزا کوچک خان جنگلی</title>
+
+  <!-- 🟩 کد مخصوص پیش‌نمایش لینک در تلگرام، واتساپ و شبکه‌های اجتماعی -->
+  <meta property="og:title" content="میرزا کوچک خان جنگلی – نهضت جنگل">
+  <meta property="og:description" content="میرزا کوچک خان ، فدایی بزرگ ایران زمین ، کسی که فریادش در گوش ظالمان زمان می‌پیچد.">
+  <meta property="og:image" content="https://mbalaee.github.io/mirza-portraits/mirza-kuchak-khan-ai-m-balaei.png">
+  <meta property="og:url" content="https://mbalaee.github.io/mirza-portraits/">
+  <meta property="og:type" content="website">
+  <meta property="og:locale" content="fa_IR">
+  <meta name="twitter:card" content="summary_large_image">
+
   <style>
     body {
       text-align: center;
       font-family: "Tahoma", sans-serif;
       background-color: #f7f7f7;
-      padding: 30px;
+      padding: 0;
       direction: rtl;
+      margin: 0;
     }
+
+    /* نوار بالای صفحه */
+    header {
+      background: linear-gradient(to right, #006400, #228b22);
+      color: white;
+      padding: 20px 10px;
+      font-size: 22px;
+      font-weight: bold;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      letter-spacing: 1px;
+    }
+
     h1 {
       color: #222;
       margin-bottom: 15px;
+      margin-top: 30px;
       font-size: 26px;
     }
+
     img {
       max-width: 90%;
       height: auto;
@@ -25,6 +50,7 @@
       box-shadow: 0 4px 12px rgba(0,0,0,0.25);
       margin-top: 20px;
     }
+
     p {
       color: #333;
       font-size: 17px;
@@ -33,6 +59,7 @@
       margin: 25px auto;
       max-width: 800px;
     }
+
     .quote {
       background-color: #fff;
       border-right: 5px solid #008000;
@@ -45,6 +72,7 @@
       max-width: 700px;
       line-height: 2;
     }
+
     .quote span {
       display: block;
       text-align: left;
@@ -55,9 +83,15 @@
   </style>
 </head>
 <body>
+
+  <!-- 🔹 نوار بالای صفحه -->
+  <header>
+    نهضت جنگل – میرزا کوچک خان جنگلی
+  </header>
+
   <h1>میرزا کوچک خان جنگلی</h1>
   <img src="mirza-kuchak-khan-ai-m-balaei.png" alt="میرزا کوچک خان جنگلی">
-  
+
   <div class="quote">
     «من عاری از شرف می‌دانم کسی را که حقوق حاکمیت و استقلال مملکت را فدیه شغل و مقام کند.  
     من استقلال ایران را خواهانم و بقای اعتبارات کشور را طالبم!»
@@ -82,9 +116,9 @@
   <p>
     این تصویر بازآفرینی‌شده با هدف ادای احترام به میرزا کوچک خان جنگلی تهیه شده است — یادگاری از مبارزی که در سخت‌ترین روزهای تاریخ، پرچم آزادی را بر دوش کشید.
   </p>
+
 </body>
 </html>
-
 
 
 
