--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   </div>
 
   <p>
-    میرزا کوچک خان جنگلی (۱۲۵۷–۱۳۰۰ خورشیدی) از مبارزان آزادی‌خواه ایران و بنیان‌گذار نهضت جنگل در گیلان بود. 
+    میرزا کوچک خان جنگلی (۱۲۵۷–۱۳۰۰ خورشیدی) از مبارزان آزادی‌خواه ایران و بنیان‌گذار نهضت جنگل در گیلان و شمال ایران بود. 
     او در دوره‌ای از تاریخ ایران برخاست که کشور درگیر اشغال نیروهای بیگانه و فساد سیاسی درباریان بود.
   </p>
 
@@ -109,8 +109,8 @@
   </p>
 
   <p>
-    میرزا کوچک خان همواره بر اصول دینی، ملی و اخلاقی تأکید داشت و هیچ‌گاه به خشونت بی‌هدف یا وابستگی به بیگانگان تن نداد.
-    او پس از سال‌ها مقاومت، در سرمای کوه‌های خلخال جان باخت؛ اما نامش به عنوان نماد پاک‌باختگی، صداقت و میهن‌دوستی در تاریخ ایران جاودانه شد.
+    میرزا کوچک خان همواره بر اصول ملی، دینی و اخلاقی تأکید داشت و هیچ‌گاه به خشونت بی‌هدف یا وابستگی به بیگانگان تن نداد.
+    او پس از سال‌ها مقاومت، در سرمای کوه‌های تالش جان باخت؛ اما نامش به عنوان نماد پاک‌باختگی، صداقت و میهن‌دوستی در تاریخ ایران جاودانه شد.
   </p>
 
   <p>
@@ -119,6 +119,5 @@
 
 </body>
 </html>
-
 
 
