--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- 🟩 کد مخصوص پیش‌نمایش لینک در تلگرام، واتساپ و شبکه‌های اجتماعی -->
   <meta property="og:title" content="میرزا کوچک خان جنگلی – نهضت جنگل">
   <meta property="og:description" content="میرزا کوچک خان ، فدایی بزرگ ایران زمین ، کسی که فریادش در گوش ظالمان زمان می‌پیچد.">
-  <meta property="og:image" content="https://raw.githubusercontent.com/mbalaee/mirza-portraits/main/mirza-kuchak-khan-ai-m-balaei.png">
+  <meta property="og:image" content="https://mbalaee.github.io/mirza-portraits/mirza-kuchak-khan-ai-m-balaei.png">
   <meta property="og:url" content="https://mbalaee.github.io/mirza-portraits/">
   <meta property="og:type" content="website">
   <meta property="og:locale" content="fa_IR">
@@ -25,7 +25,6 @@
       margin: 0;
     }
 
-    /* نوار بالای صفحه */
     header {
       background: linear-gradient(to right, #006400, #228b22);
       color: white;
@@ -51,19 +50,23 @@
       margin-top: 20px;
     }
 
-    .content {
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 0 18px 80px 18px;
-      box-sizing: border-box;
-    }
-
     p {
       color: #333;
       font-size: 17px;
       line-height: 1.9;
       text-align: justify;
-      margin: 25px 0;
+      margin: 25px auto;
+      max-width: 800px;
+      padding: 0 15px;
+    }
+
+    hr {
+      border: none;
+      height: 2px;
+      background: linear-gradient(to right, #bbb, #ddd, #bbb);
+      width: 80%;
+      margin: 40px auto;
+      border-radius: 2px;
     }
 
     .quote {
@@ -77,7 +80,6 @@
       box-shadow: 0 3px 8px rgba(0,0,0,0.15);
       max-width: 700px;
       line-height: 2;
-      border-radius: 10px;
     }
 
     .quote span {
@@ -91,40 +93,43 @@
 </head>
 <body>
 
-  <!-- 🔹 نوار بالای صفحه -->
   <header>
     نهضت جنگل – میرزا کوچک خان جنگلی
   </header>
 
-  <div class="content">
-    <h1>میرزا کوچک خان جنگلی</h1>
-    <img src="mirza-kuchak-khan-ai-m-balaei.png" alt="میرزا کوچک خان جنگلی">
+  <h1>میرزا کوچک خان جنگلی</h1>
+  <img src="mirza-kuchak-khan-ai-m-balaei.png" alt="میرزا کوچک خان جنگلی">
 
-    <div class="quote">
-      «من عاری از شرف می‌دانم کسی را که حقوق حاکمیت و استقلال مملکت را فدیه شغل و مقام کند.  
-      من استقلال ایران را خواهانم و بقای اعتبارات کشور را طالبم!»
-      <span>— میرزا کوچک خان جنگلی</span>
-    </div>
-
-    <p>
-      میرزا کوچک خان جنگلی (۱۲۵۷–۱۳۰۰ خورشیدی) از مبارزان آزادی‌خواه ایران و بنیان‌گذار نهضت جنگل در گیلان و شمال ایران بود. 
-      او در دوره‌ای از تاریخ ایران برخاست که کشور درگیر اشغال نیروهای بیگانه و فساد سیاسی درباریان بود.
-    </p>
-
-    <p>
-      هدف میرزا از تشکیل نهضت جنگل، استقلال ایران، عدالت اجتماعی و مقابله با نفوذ قدرت‌های بیگانه به‌ویژه روس و انگلیس بود.
-      او در جنگل‌های گیلان، حکومتی مردمی و مستقل تشکیل داد و با سربازان خود، که بیشتر از مردم بومی بودند، برای آزادی و عدالت جنگید.
-    </p>
-
-    <p>
-      میرزا کوچک خان همواره بر اصول ملی، دینی و اخلاقی تأکید داشت و هیچ‌گاه به خشونت بی‌هدف یا وابستگی به بیگانگان تن نداد.
-      او پس از سال‌ها مقاومت، در سرمای کوه‌های تالش جان باخت؛ اما نامش به عنوان نماد پاک‌باختگی، صداقت و میهن‌دوستی در تاریخ ایران جاودانه شد.
-    </p>
-
-    <p>
-      این تصویر بازآفرینی‌شده با هدف ادای احترام به میرزا کوچک خان جنگلی تهیه شده است — یادگاری از مبارزی که در سخت‌ترین روزهای تاریخ، پرچم آزادی را بر دوش کشید.
-    </p>
+  <div class="quote">
+    «من عاری از شرف می‌دانم کسی را که حقوق حاکمیت و استقلال مملکت را فدیه شغل و مقام کند.  
+    من استقلال ایران را خواهانم و بقای اعتبارات کشور را طالبم!»
+    <span>— میرزا کوچک خان جنگلی</span>
   </div>
+
+  <p>
+    میرزا کوچک خان جنگلی (۱۲۵۷–۱۳۰۰ خورشیدی) از مبارزان آزادی‌خواه ایران و بنیان‌گذار نهضت جنگل در گیلان و شمال ایران بود. 
+    او در دوره‌ای از تاریخ ایران برخاست که کشور درگیر اشغال نیروهای بیگانه و فساد سیاسی درباریان بود.
+  </p>
+
+  <p>
+    هدف میرزا از تشکیل نهضت جنگل، استقلال ایران، عدالت اجتماعی و مقابله با نفوذ قدرت‌های بیگانه به‌ویژه روس و انگلیس بود.
+    او در جنگل‌های گیلان، حکومتی مردمی و مستقل تشکیل داد و با سربازان خود، که بیشتر از مردم بومی بودند، برای آزادی و عدالت جنگید.
+  </p>
+
+  <p>
+    میرزا کوچک خان همواره بر اصول ملی، دینی و اخلاقی تأکید داشت و هیچ‌گاه به خشونت بی‌هدف یا وابستگی به بیگانگان تن نداد.
+  </p>
+
+  <!-- 🔸 خط جداکننده زیبا بین دو بخش -->
+  <hr>
+
+  <p>
+    او پس از سال‌ها مقاومت، در سرمای کوه‌های تالش جان باخت؛ اما نامش به عنوان نماد پاک‌باختگی، صداقت و میهن‌دوستی در تاریخ ایران جاودانه شد.
+  </p>
+
+  <p>
+    این تصویر بازآفرینی‌شده با هدف ادای احترام به میرزا کوچک خان جنگلی تهیه شده است — یادگاری از مبارزی که در سخت‌ترین روزهای تاریخ، پرچم آزادی را بر دوش کشید.
+  </p>
 
 </body>
 </html>
