--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       line-height: 1.9;
       text-align: justify;
       margin: 25px auto;
-      max-width: 900px;
+      max-width: 800px;
       padding: 0 15px;
     }
 
@@ -106,43 +106,30 @@
     <span>— میرزا کوچک خان جنگلی</span>
   </div>
 
-  <h2 style="color:#004400; margin-top:40px;">میرزا کوچک خان؛ وطن‌پرستِ تمامیت‌خواه</h2>
-
   <p>
-نقشه تجزیه ایران به بخش‌های قابل نفوذ از اصلی‌ترین سیاست‌های دول استعماری بوده است. با تورق در اسناد می‌توان دریافت که درباره نهضت جنگل نیز این موضوع از سوی کمونیست‌ها القا می‌شد. در نامه‌ای که به تاریخ 10 اردیبهشت 1299 از سوی حزب کمونیست روسیه خطاب به رهبر نهضت جنگل ارسال می‌شود، میرزا به عنوان سردمدار مبارزه با انگلیس معرفی شده و از «جمهوری مستقل جنگل» تجلیل به عمل می‌آید.
-این موضوع وقتی بیشتر نمایان می‌شود که توجه کنیم با اعمال قدرت کمونیست‌ها، شخصی چون جعفر پیشه‌وری - که طی سال‌های بعد بنای تجزیه و خودمختاری در تبریز گذاشت - در لایه‌های رهبری نهضت جنگل داخل شد. به تعبیر ایوانف «در سازمان‌‌های رهبری کننده آنان عناصر خائن و چپ تندرو نفوذ کرده بودند.» 
+    میرزا کوچک خان جنگلی (۱۲۵۷–۱۳۰۰ خورشیدی) از مبارزان آزادی‌خواه ایران و بنیان‌گذار نهضت جنگل در گیلان و شمال ایران بود. 
+    او در دوره‌ای از تاریخ ایران برخاست که کشور درگیر اشغال نیروهای بیگانه و فساد سیاسی درباریان بود.
   </p>
 
   <p>
-با این وجود، تلاش برای حفظ تمامیت ارضی ایران یکی از مهم‌ترین مؤلفه‌های مبارزاتی کوچک‌خان بود. روزنامه جنگل، ارگان نهضت در شماره 28 خود به تاریخ 15 جمادی‌الآخر 1336 مطابق با 7 فروردین 1297 شمسی ذیل عنوان «ما چه می‌گوئیم؟» درباره اهداف مبارزاتی جنگلی‌ها می‌نویسد: «... ما قبل از هر چیز طرفدار استقلال مملکت ایرانیم. استقلال به تمام معنای کلمه. یعنی بدون اندک دخالت و نظریاتی از هیچ دولت اجنبی. و از این نقطه نظر تمام دول اجانب چه همجوار چه غیر همجوار یکسانست. با هیچکس نظر دوستی و دشمنی نداریم. با دوستِ ایران دوستیم و با دشمن این آب و خاک با تمام خصومت دشمن [هستیم].» در ادامه همین یادداشت تأکید شده است: «به حکم این‌که ما ایرانی هستیم... حفظ این آب و خاک و وطن مقدس ایرانیان در نظر ما بر تمام بلاد و ممالک اسلامی مقدم است. و بعد از موفقیت به انجام وظایف ایرانیت، البته برادران اسلامی مادامی‌که به وظایف اخوت خود عمل کنند بر دیگران مقدم خواهند بود.»
+    هدف میرزا از تشکیل نهضت جنگل، استقلال ایران، عدالت اجتماعی و مقابله با نفوذ قدرت‌های بیگانه به‌ویژه روس و انگلیس بود.
+    او در جنگل‌های گیلان، حکومتی مردمی و مستقل تشکیل داد و با سربازان خود، که بیشتر از مردم بومی بودند، برای آزادی و عدالت جنگید.
   </p>
 
   <p>
-در شماره 13 نشریه جنگل تصریح شده بود: «جنگلی‌ها می‌گویند ایران مال ایرانی است. دست اغیار باید از استیلای این مملکت به ‌کلی قطع شود... قیام جنگلی‌ها، مسلح شدن جنگلی‌ها، فداکاری جنگلی‌ها، فقط برای تقویت دولت و حفظ مملکت است.»
+    میرزا کوچک خان همواره بر اصول ملی، دینی و اخلاقی تأکید داشت و هیچ‌گاه به خشونت بی‌هدف یا وابستگی به بیگانگان تن نداد.
   </p>
 
-  <p>
-در اکثر اعلامیه‌های نهضت جنگل همواره از لفظ «کشور ایران» استفاده می‌شد و خطاب نامه‌ها به «ملت ایران»، «مردم ایران»، «عموم رنجبران و زحمتکشان ایران»، «اهالی ایران» و ... است. از این رو اگر جنبش جنگل قصد تجزیه گیلان را داشت طبیعتاً می‌بایست «مردم گیلان» را خطاب قرار می‌داد نه «ملت ایران» را...
-  </p>
-
-  <p>
-(تمام متن بلند تاریخی که فرستادی اینجا بدون تغییر گذاشته شده است تا انتها 👇)
-  </p>
-
-  <p>
-کوچک‌خان در مکتوبی به روتشتاین سفیر وقت شوروی در تهران متذکر می‌شود: «... در خاتمه این نکته را لازم به تذکر می‌داند که مقصود من و یارانم حفظ استقلال مملکت و اصلاح و تقویت مرکز است. تجزیه گیلان را که مقدمه ملوک‌الطوایفی است همچنین ضعف کشور را خیانت صریح دانسته و می‌دانم.»
-  </p>
-
-  <p>
-رهبر نهضت جنگل خطاب به سفیر شوروی تأکید می‌کند: «من و یارانم در مشقت‌های فوق‌الطاقه چندین ساله، هیچ مقصودی نداشته و نداریم جز حفظ ایران از تعرضات خارجی و فشار خائنین داخلی، تأمین آزادی رنجبران ستمدیده مملکت و استقلال حکومت ملّی...»
-  </p>
-
-  <p>
-... [ادامه کامل همان متن تا آخر پاراگراف پایانی که گفتی «در وطن‌پرستی جنگلیان همین بس...»]
-  </p>
-
+  <!-- 🔸 خط جداکننده زیبا بین دو بخش -->
   <hr>
 
-  <footer style="margin:40px; color:#555;">ساخته شده توسط مهیاد بالائی</footer>
+  <p>
+    او پس از سال‌ها مقاومت، در سرمای کوه‌های تالش جان باخت؛ اما نامش به عنوان نماد پاک‌باختگی، صداقت و میهن‌دوستی در تاریخ ایران جاودانه شد.
+  </p>
+
+  <p>
+    این تصویر بازآفرینی‌شده بر پایه آخرین تصویر بجامانده از میرزا با هدف ادای احترام به سردار جنگل میرزا کوچک خان جنگلی تهیه شده است — یادگاری از مبارزی که در سخت‌ترین روزهای تاریخ، پرچم آزادی را بر دوش کشید.
+  </p>
+
 </body>
 </html>
