--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <!-- 🟩 کد مخصوص پیش‌نمایش لینک در تلگرام، واتساپ و شبکه‌های اجتماعی -->
   <meta property="og:title" content="میرزا کوچک خان جنگلی – نهضت جنگل">
-  <meta property="og:description" content="میرزا کوچک خان ، فدایی بزرگ ایران زمین ، کسی که فریادش در گوش ظالمان زمان می‌پیچد.">
+  <meta property="og:description" content="میرزا کوچک خان جنگلی ، سردار و آزادی‌خواه ایرانی ، کسی که فریادش در گوش ظالمان زمان می‌پیچد.">
   <meta property="og:image" content="https://mbalaee.github.io/mirza-portraits/mirza-kuchak-khan-ai-m-balaei.png">
   <meta property="og:url" content="https://mbalaee.github.io/mirza-portraits/">
   <meta property="og:type" content="website">
