--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   </p>
 
   <p>
-    این تصویر بازآفرینی‌شده بر پایه آخرین تصویر بجامانده از میرزا با هدف ادای احترام به سردار جنگل میرزا کوچک خان جنگلی تهیه شده است — یادگاری از مبارزی که در سخت‌ترین روزهای تاریخ، پرچم آزادی را بر دوش کشید.
+    این تصویر بازآفرینی‌شده بر پایه آخرین تصویر بجامانده ، با هدف ادای احترام به سردار جنگل میرزا کوچک خان جنگلی تهیه شده است — یادگاری از مبارزی که در سخت‌ترین روزهای تاریخ، پرچم آزادی را بر دوش کشید.
   </p>
 
 </body>
