--- a/index.html
+++ b/index.html
@@ -313,17 +313,6 @@ img.main-portrait:hover {
   btnTheme.addEventListener('click', () => {
     document.body.classList.toggle('dark-mode');
   });
-</script>
-
-<!-- منابع -->
-<section id="references">
-  <h2>منابع و مطالعه بیشتر</h2>
-  <ul>
-    <li><a href="https://example.com/book-que-majd" target="_blank">«قحطی بزرگ» — محمدقلی مجد</a></li>
-    <li><a href="https://historydocuments.ir/?page=post&id=3406" target="_blank">مرکز بررسی اسناد تاریخی</a></li>
-    <li><a href="https://www.iran-pedia.org/wiki/%D9%85%DB%8C%D8%B1%D8%B2%D8%A7_%DA%A9%D9%88%DA%86%DA%A9%E2%80%8C_%D8%AE%D8%A7%D9%86_%D8%AC%D9%86%DA%AF%D9%84%DB%8C" target="_blank">ایران پدیا میرزا کوچک خان جنگلی</a></li>
-  </ul>
-</section>
 </head>
 <body>
 
@@ -362,7 +351,7 @@ img.main-portrait:hover {
   </p>
 
   <p>
-    این تصویر بازآفرینی‌شده بر پایه آخرین تصویر بجامانده ، با هدف ادای احترام به سردار جنگل میرزا کوچک خان جنگلی تهیه شده است — یادگاری از مبارزی که در سخت‌ترین روزهای تاریخ، پرچم آزادی را بر دوش کشید.
+    این تصویر بازآفرینی‌شده بر پایه آخرین تصویر بجامانده، با هدف ادای احترام به سردار جنگل؛ میرزا کوچک خان جنگلی تهیه شده است — یادگاری از مبارزی که در سخت‌ترین روزهای تاریخ، پرچم آزادی را بر دوش کشید.
   </p>
 
 </body>
