--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@ img.main-portrait:hover {
   btnTheme.addEventListener('click', () => {
     document.body.classList.toggle('dark-mode');
   });
+<script>
 </head>
 <body>
 
