--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="fa">
 <head>
-  <meta name="google-site-verification" content="OKzCma3IbxhS8gSkzBm6NTwl0I_Te7Ze-RoD9QQzHlo" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="تصویری بازآفرینی‌شده از میرزا کوچک خان جنگلی، رهبر نهضت جنگل و مبارز راه آزادی ایران.">
@@ -9,7 +8,7 @@
 
   <!-- 🟩 کد مخصوص پیش‌نمایش لینک در تلگرام، واتساپ و شبکه‌های اجتماعی -->
   <meta property="og:title" content="میرزا کوچک خان جنگلی – نهضت جنگل">
-  <meta property="og:description" content="میرزا کوچک خان جنگلی ، سردار و آزادی‌خواه ایرانی ، کسی که فریادش در گوش ظالمان زمان می‌پیچد.">
+  <meta property="og:description" content="میرزا کوچک خان ، فدایی بزرگ ایران زمین ، کسی که فریادش در گوش ظالمان زمان می‌پیچد.">
   <meta property="og:image" content="https://mbalaee.github.io/mirza-portraits/mirza-kuchak-khan-ai-m-balaei.png">
   <meta property="og:url" content="https://mbalaee.github.io/mirza-portraits/">
   <meta property="og:type" content="website">
@@ -91,229 +90,6 @@
       margin-top: 10px;
     }
   </style>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>میرزا کوچک خان جنگلی – نهضت جنگل</title>
-<meta name="description" content="زندگی‌نامه و بازآفرینی تصویر میرزا کوچک خان جنگلی، بنیان‌گذار نهضت جنگل در گیلان و شمال ایران.">
-<meta name="keywords" content="میرزا کوچک خان، نهضت جنگل، گیلان، مبارز آزادی، تاریخ ایران">
-
-<!-- فونت‌های فارسی مدرن -->
-<link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@300;400;700&family=Samim:wght@400;700&display=swap" rel="stylesheet">
-
-<!-- Font Awesome برای آیکون‌ها -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-
-<!-- فاوآیکون -->
-<link rel="icon" type="image/png" href="favicon.png">
-
-<style>
-:root {
-  --primary-color: #1e3a8a; /* آبی تیره */
-  --secondary-color: #f59e0b; /* طلایی */
-  --accent-color: #10b981; /* سبز ملایم */
-  --background-light: #f3f4f6;
-  --text-dark: #111827;
-  --card-bg: #ffffff;
-}
-.dark-mode {
-  --background-light: #111827;
-  --text-dark: #f3f4f6;
-  --card-bg: #1f2937;
-}
-
-* {
-  box-sizing: border-box;
-  scroll-behavior: smooth;
-}
-
-body {
-  font-family: 'Vazirmatn', 'Samim', sans-serif;
-  background-color: var(--background-light);
-  color: var(--text-dark);
-  margin: 0;
-  line-height: 1.6;
-}
-
-a {
-  text-decoration: none;
-  color: var(--secondary-color);
-  transition: 0.3s;
-}
-a:hover { color: var(--primary-color); }
-
-h1, h2, h3 { font-family: 'Samim', sans-serif; }
-
-h1 {
-  font-size: 3rem;
-  text-align: center;
-  margin: 60px 20px 20px;
-  color: var(--primary-color);
-}
-
-section {
-  padding: 60px 20px;
-}
-
-.container {
-  max-width: 1200px;
-  margin: auto;
-  padding: 0 20px;
-}
-
-/* کارت متن معرفی */
-.intro-card {
-  background: var(--card-bg);
-  padding: 30px 25px;
-  margin: 40px auto;
-  max-width: 900px;
-  box-shadow: 0 12px 24px rgba(0,0,0,0.08);
-  border-radius: 16px;
-  opacity: 0;
-  transform: translateY(30px);
-  animation: fadeInUp 0.8s forwards ease-out;
-  transition: all 0.3s;
-}
-
-/* تصویر اصلی با افکت مدرن */
-img.main-portrait {
-  display: block;
-  margin: 40px auto;
-  max-width: 90%;
-  border-radius: 16px;
-  border: 5px solid var(--secondary-color);
-  box-shadow: 0 12px 24px rgba(0,0,0,0.1);
-  transition: transform 0.5s ease, box-shadow 0.5s ease;
-}
-img.main-portrait:hover {
-  transform: scale(1.05) rotate(1deg);
-  box-shadow: 0 20px 40px rgba(0,0,0,0.2);
-}
-
-/* نقل‌قول */
-.big-quote {
-  font-size: 1.6rem;
-  margin: 50px auto;
-  max-width: 750px;
-  border-left: 6px solid var(--accent-color);
-  padding-left: 20px;
-  color: var(--primary-color);
-  font-style: italic;
-  text-align: center;
-  background: rgba(255,255,255,0.05);
-  border-radius: 8px;
-  box-shadow: 0 6px 12px rgba(0,0,0,0.05);
-}
-
-/* فرم تماس */
-#contact {
-  background: var(--card-bg);
-  padding: 40px 30px;
-  margin: 60px auto;
-  max-width: 700px;
-  border-radius: 12px;
-  box-shadow: 0 12px 24px rgba(0,0,0,0.1);
-}
-#contact input[type="email"], #contact input[type="submit"] {
-  width: 100%;
-  padding: 12px;
-  margin-top: 10px;
-  border-radius: 8px;
-  border: 1px solid #ccc;
-  font-size: 1rem;
-}
-#contact input[type="submit"] {
-  background: var(--secondary-color);
-  color: white;
-  border: none;
-  cursor: pointer;
-  transition: 0.3s;
-}
-#contact input[type="submit"]:hover { background: var(--primary-color); }
-
-/* منابع */
-#references ul {
-  list-style: disc;
-  margin-left: 20px;
-  max-width: 700px;
-  margin: 40px auto;
-}
-#references li {
-  margin-bottom: 10px;
-}
-
-/* دکمه برگشت به بالا */
-#backToTop {
-  position: fixed;
-  bottom: 40px;
-  right: 40px;
-  display: none;
-  padding: 12px 18px;
-  font-size: 18px;
-  border: none;
-  border-radius: 8px;
-  background: var(--accent-color);
-  color: white;
-  cursor: pointer;
-  box-shadow: 0 6px 12px rgba(0,0,0,0.2);
-  transition: 0.3s;
-}
-#backToTop:hover { background: var(--secondary-color); }
-
-/* انیمیشن‌ها */
-@keyframes fadeInUp {
-  to { opacity: 1; transform: translateY(0); }
-}
-
-/* grid برای بخش‌های زیبا */
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  gap: 40px;
-  margin: 50px 0;
-}
-
-.grid-item {
-  background: var(--card-bg);
-  padding: 20px;
-  border-radius: 12px;
-  box-shadow: 0 12px 24px rgba(0,0,0,0.08);
-  transition: transform 0.4s ease, box-shadow 0.4s ease;
-}
-.grid-item:hover {
-  transform: translateY(-6px);
-  box-shadow: 0 20px 40px rgba(0,0,0,0.15);
-}
-
-  </style>
-  <!-- دکمه برگشت به بالا -->
-<button id="backToTop">↑ بالا</button>
-
-<script>
-  // دکمه برگشت به بالا
-  const btn = document.getElementById('backToTop');
-  window.addEventListener('scroll', () => {
-    if (window.scrollY > 300) btn.style.display = 'block';
-    else btn.style.display = 'none';
-  });
-  btn.addEventListener('click', () => window.scrollTo({top:0, behavior:'smooth'}));
-
-  // حالت روشن / تاریک
-  const btnTheme = document.createElement('button');
-  btnTheme.innerText = 'تغییر حالت';
-  btnTheme.style.position='fixed';
-  btnTheme.style.bottom='100px';
-  btnTheme.style.right='40px';
-  btnTheme.style.padding='12px';
-  btnTheme.style.backgroundColor='var(--accent-color)';
-  btnTheme.style.color='white';
-  btnTheme.style.border='none';
-  btnTheme.style.borderRadius='5px';
-  btnTheme.style.cursor='pointer';
-  document.body.appendChild(btnTheme);
-  btnTheme.addEventListener('click', () => {
-    document.body.classList.toggle('dark-mode');
-  });
-<script>
 </head>
 <body>
 
@@ -352,7 +128,7 @@ img.main-portrait:hover {
   </p>
 
   <p>
-    این تصویر بازآفرینی‌شده بر پایه آخرین تصویر بجامانده، با هدف ادای احترام به سردار جنگل؛ میرزا کوچک خان جنگلی تهیه شده است — یادگاری از مبارزی که در سخت‌ترین روزهای تاریخ، پرچم آزادی را بر دوش کشید.
+    این تصویر بازآفرینی‌شده با هدف ادای احترام به میرزا کوچک خان جنگلی تهیه شده است — یادگاری از مبارزی که در سخت‌ترین روزهای تاریخ، پرچم آزادی را بر دوش کشید.
   </p>
 
 </body>
