--- a/index.html
+++ b/index.html
@@ -1,135 +1,136 @@
 <!DOCTYPE html>
 <html lang="fa">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="تصویری بازآفرینی‌شده از میرزا کوچک خان جنگلی، رهبر نهضت جنگل و مبارز راه آزادی ایران.">
-  <title>میرزا کوچک خان جنگلی</title>
+  <meta name="google-site-verification" content="OKzCma3IbxhS8gSkzBm6NTwl0I_Te7Ze-RoD9QQzHlo" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="تصویری بازآفرینی‌شده از میرزا کوچک خان جنگلی، رهبر نهضت جنگل و مبارز راه آزادی ایران.">
+  <title>میرزا کوچک خان جنگلی</title>
 
-  <!-- 🟩 کد مخصوص پیش‌نمایش لینک در تلگرام، واتساپ و شبکه‌های اجتماعی -->
-  <meta property="og:title" content="میرزا کوچک خان جنگلی – نهضت جنگل">
-  <meta property="og:description" content="میرزا کوچک خان ، فدایی بزرگ ایران زمین ، کسی که فریادش در گوش ظالمان زمان می‌پیچد.">
-  <meta property="og:image" content="https://mbalaee.github.io/mirza-portraits/mirza-kuchak-khan-ai-m-balaei.png">
-  <meta property="og:url" content="https://mbalaee.github.io/mirza-portraits/">
-  <meta property="og:type" content="website">
-  <meta property="og:locale" content="fa_IR">
-  <meta name="twitter:card" content="summary_large_image">
+  <!-- 🟩 کد مخصوص پیش‌نمایش لینک در تلگرام، واتساپ و شبکه‌های اجتماعی -->
+  <meta property="og:title" content="میرزا کوچک خان جنگلی – نهضت جنگل">
+  <meta property="og:description" content="میرزا کوچک خان جنگلی ، سردار و آزادی‌خواه ایرانی ، کسی که فریادش در گوش ظالمان زمان می‌پیچد.">
+  <meta property="og:image" content="https://mbalaee.github.io/mirza-portraits/mirza-kuchak-khan-ai-m-balaei.png">
+  <meta property="og:url" content="https://mbalaee.github.io/mirza-portraits/">
+  <meta property="og:type" content="website">
+  <meta property="og:locale" content="fa_IR">
+  <meta name="twitter:card" content="summary_large_image">
 
-  <style>
-    body {
-      text-align: center;
-      font-family: "Tahoma", sans-serif;
-      background-color: #f7f7f7;
-      padding: 0;
-      direction: rtl;
-      margin: 0;
-    }
+  <style>
+    body {
+      text-align: center;
+      font-family: "Tahoma", sans-serif;
+      background-color: #f7f7f7;
+      padding: 0;
+      direction: rtl;
+      margin: 0;
+    }
 
-    header {
-      background: linear-gradient(to right, #006400, #228b22);
-      color: white;
-      padding: 20px 10px;
-      font-size: 22px;
-      font-weight: bold;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-      letter-spacing: 1px;
-    }
+    header {
+      background: linear-gradient(to right, #006400, #228b22);
+      color: white;
+      padding: 20px 10px;
+      font-size: 22px;
+      font-weight: bold;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      letter-spacing: 1px;
+    }
 
-    h1 {
-      color: #222;
-      margin-bottom: 15px;
-      margin-top: 30px;
-      font-size: 26px;
-    }
+    h1 {
+      color: #222;
+      margin-bottom: 15px;
+      margin-top: 30px;
+      font-size: 26px;
+    }
 
-    img {
-      max-width: 90%;
-      height: auto;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.25);
-      margin-top: 20px;
-    }
+    img {
+      max-width: 90%;
+      height: auto;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.25);
+      margin-top: 20px;
+    }
 
-    p {
-      color: #333;
-      font-size: 17px;
-      line-height: 1.9;
-      text-align: justify;
-      margin: 25px auto;
-      max-width: 800px;
-      padding: 0 15px;
-    }
+    p {
+      color: #333;
+      font-size: 17px;
+      line-height: 1.9;
+      text-align: justify;
+      margin: 25px auto;
+      max-width: 800px;
+      padding: 0 15px;
+    }
 
-    hr {
-      border: none;
-      height: 2px;
-      background: linear-gradient(to right, #bbb, #ddd, #bbb);
-      width: 80%;
-      margin: 40px auto;
-      border-radius: 2px;
-    }
+    hr {
+      border: none;
+      height: 2px;
+      background: linear-gradient(to right, #bbb, #ddd, #bbb);
+      width: 80%;
+      margin: 40px auto;
+      border-radius: 2px;
+    }
 
-    .quote {
-      background-color: #fff;
-      border-right: 5px solid #008000;
-      margin: 30px auto;
-      padding: 20px;
-      font-size: 18px;
-      font-style: italic;
-      color: #111;
-      box-shadow: 0 3px 8px rgba(0,0,0,0.15);
-      max-width: 700px;
-      line-height: 2;
-    }
+    .quote {
+      background-color: #fff;
+      border-right: 5px solid #008000;
+      margin: 30px auto;
+      padding: 20px;
+      font-size: 18px;
+      font-style: italic;
+      color: #111;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.15);
+      max-width: 700px;
+      line-height: 2;
+    }
 
-    .quote span {
-      display: block;
-      text-align: left;
-      color: #555;
-      font-size: 15px;
-      margin-top: 10px;
-    }
-  </style>
+    .quote span {
+      display: block;
+      text-align: left;
+      color: #555;
+      font-size: 15px;
+      margin-top: 10px;
+    }
+  </style>
 </head>
 <body>
 
-  <header>
-    نهضت جنگل – میرزا کوچک خان جنگلی
-  </header>
+  <header>
+    نهضت جنگل – میرزا کوچک خان جنگلی
+  </header>
 
-  <h1>میرزا کوچک خان جنگلی</h1>
-  <img src="mirza-kuchak-khan-ai-m-balaei.png" alt="میرزا کوچک خان جنگلی">
+  <h1>میرزا کوچک خان جنگلی</h1>
+  <img src="mirza-kuchak-khan-ai-m-balaei.png" alt="میرزا کوچک خان جنگلی">
 
-  <div class="quote">
-    «من عاری از شرف می‌دانم کسی را که حقوق حاکمیت و استقلال مملکت را فدیه شغل و مقام کند.  
-    من استقلال ایران را خواهانم و بقای اعتبارات کشور را طالبم!»
-    <span>— میرزا کوچک خان جنگلی</span>
-  </div>
+  <div class="quote">
+    «من عاری از شرف می‌دانم کسی را که حقوق حاکمیت و استقلال مملکت را فدیه شغل و مقام کند.  
+    من استقلال ایران را خواهانم و بقای اعتبارات کشور را طالبم!»
+    <span>— میرزا کوچک خان جنگلی</span>
+  </div>
 
-  <p>
-    میرزا کوچک خان جنگلی (۱۲۵۷–۱۳۰۰ خورشیدی) از مبارزان آزادی‌خواه ایران و بنیان‌گذار نهضت جنگل در گیلان و شمال ایران بود. 
-    او در دوره‌ای از تاریخ ایران برخاست که کشور درگیر اشغال نیروهای بیگانه و فساد سیاسی درباریان بود.
-  </p>
+  <p>
+    میرزا کوچک خان جنگلی (۱۲۵۷–۱۳۰۰ خورشیدی) از مبارزان آزادی‌خواه ایران و بنیان‌گذار نهضت جنگل در گیلان و شمال ایران بود. 
+    او در دوره‌ای از تاریخ ایران برخاست که کشور درگیر اشغال نیروهای بیگانه و فساد سیاسی درباریان بود.
+  </p>
 
-  <p>
-    هدف میرزا از تشکیل نهضت جنگل، استقلال ایران، عدالت اجتماعی و مقابله با نفوذ قدرت‌های بیگانه به‌ویژه روس و انگلیس بود.
-    او در جنگل‌های گیلان، حکومتی مردمی و مستقل تشکیل داد و با سربازان خود، که بیشتر از مردم بومی بودند، برای آزادی و عدالت جنگید.
-  </p>
+  <p>
+    هدف میرزا از تشکیل نهضت جنگل، استقلال ایران، عدالت اجتماعی و مقابله با نفوذ قدرت‌های بیگانه به‌ویژه روس و انگلیس بود.
+    او در جنگل‌های گیلان، حکومتی مردمی و مستقل تشکیل داد و با سربازان خود، که بیشتر از مردم بومی بودند، برای آزادی و عدالت جنگید.
+  </p>
 
-  <p>
-    میرزا کوچک خان همواره بر اصول ملی، دینی و اخلاقی تأکید داشت و هیچ‌گاه به خشونت بی‌هدف یا وابستگی به بیگانگان تن نداد.
-  </p>
+  <p>
+    میرزا کوچک خان همواره بر اصول ملی، دینی و اخلاقی تأکید داشت و هیچ‌گاه به خشونت بی‌هدف یا وابستگی به بیگانگان تن نداد.
+  </p>
 
-  <!-- 🔸 خط جداکننده زیبا بین دو بخش -->
-  <hr>
+  <!-- 🔸 خط جداکننده زیبا بین دو بخش -->
+  <hr>
 
-  <p>
-    او پس از سال‌ها مقاومت، در سرمای کوه‌های تالش جان باخت؛ اما نامش به عنوان نماد پاک‌باختگی، صداقت و میهن‌دوستی در تاریخ ایران جاودانه شد.
-  </p>
+  <p>
+    او پس از سال‌ها مقاومت، در سرمای کوه‌های تالش جان باخت؛ اما نامش به عنوان نماد پاک‌باختگی، صداقت و میهن‌دوستی در تاریخ ایران جاودانه شد.
+  </p>
 
-  <p>
-    این تصویر بازآفرینی‌شده با هدف ادای احترام به میرزا کوچک خان جنگلی تهیه شده است — یادگاری از مبارزی که در سخت‌ترین روزهای تاریخ، پرچم آزادی را بر دوش کشید.
-  </p>
+  <p>
+    این تصویر بازآفرینی‌شده بر پایه آخرین تصویر بجامانده، با هدف ادای احترام به سردار جنگل میرزا کوچک خان جنگلی تهیه شده است — یادگاری از مبارزی که در سخت‌ترین روزهای تاریخ، پرچم آزادی را بر دوش کشید.
+  </p>
 
 </body>
 </html>
